Fixing issue with background image for jumbotron not showing up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ div.panel.show {
 
 
 .jumbotron {
-  background-image: url('jenee.jpg');
+  background-image: url('jenee2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   height: 600px;
